2003-05-31  Ulrich Drepper  <drepper@redhat.com>

	* posix-timer.h: Remove old, unused timer_id2ptr and timer_ptr2id
	definitions.

	* sysdeps/pthread/timer_create.c (timer_create): In case
	evp==NULL, assign timer ID to sival_ptr.

	* descr.h (struct pthread_unwind_buf): Change type of prev element to
	struct pthread_unwind_buf *.
	(struct pthread): Likewise for cleanup_jmp_buf element.

	* cleanup.c (__pthread_register_cancel): Add cast to avoid warning.
	* cleanup_defer.c (__pthread_register_cancel_defer): Likewise.
	* unwind.c (__pthread_unwind_next): Likewise.

2003-05-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h
	(lll_futex_timed_wait): Use int for futex value parameter.
	(lll_futex_wake): Likewise.
	(lll_futex_requeue): Likewise.

	* sysdeps/unix/sysv/linux/lowlevellock.c (__lll_lock_wait):
	Replace one memory operation with one register operation.

	* tst-join4.c (do_test): Fix error message.

	* tst-rwlock6.c (do_test): Use correct format specifier.

	* sysdeps/unix/sysv/linux/i386/i486/lowlevelmutex.S
	(__lll_mutex_lock_wait): Replace one memory operation with one
	register operation.
	* sysdeps/unix/sysv/linux/x86_64/lowlevelmutex.S
	(__lll_mutex_lock_wait): Likewise.

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h
	(__lll_mutex_cond_lock): Add one to value parameter of
	__lll_lock_wait to reflect reality in the futex syscall.
	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h
	(lll_mutex_cond_lock): Likewise.

2003-05-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/lowlevellock.h (__lll_mutex_cond_lock):
	New function.
	(lll_mutex_cond_lock): Define.

2003-05-29  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-signal6.
	* tst-signal6.c: New file.

	* sysdeps/unix/sysv/linux/s390/lowlevellock.h
	(__lll_mutex_unlock_force): New function
	(lll_mutex_unlock_force): Use __lll_mutex_unlock_force.

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h